@@ -1,6 +1,7 @@
 Revision history for Perl application Wx::Demo.
 
 0.10
+	- Fixed wxListCtrl report mode demo latent bug.
 
 0.09  Sun Aug 26 01:10:56 CEST 2007
 	- Added demo for wxHyperlinkCtrl.
